
import { mount, shallow } from 'enzyme';
import Checkbox from '../Checkbox.js';
import { getSingleSpecWrapper } from "../../../util/tests/data-spec.js";

const generateComponent = (additionalProps={}) => (
    <Checkbox {...additionalProps} />
);

it ("should render with minimal props", () => {
  let component = mount(generateComponent());
  expect(component).toMatchSnapshot();
});

it ("should accept a default value", () => {
  let component = mount(generateComponent({
    defaultValue: true
  }));
  expect(component).toMatchSnapshot();

  const inputProps = getSingleSpecWrapper(component, "input").props();

  expect(inputProps.defaultChecked).toEqual("checked");
});

it ("should disable input with disabled prop", () => {
  let component = mount(generateComponent({
    disabled: true,
  }));
  expect(component).toMatchSnapshot();

  const inputProps = getSingleSpecWrapper(component, "input").props();

  expect(inputProps.disabled).toEqual(true);
});

it ("should add classes with classes prop", () => {
  let component = mount(generateComponent({
    classes: ["test1", "harambe"],
  }));
  let component2 = mount(generateComponent({
    classes: "test1 harambe",
  }));
  expect(component).toMatchSnapshot();
  expect(component2).toMatchSnapshot();

  const wrapper = getSingleSpecWrapper(component, "input-wrapper");
  const wrapper2 = getSingleSpecWrapper(component2, "input-wrapper");

  expect(wrapper.hasClass("harambe")).toEqual(true);
  expect(wrapper2.hasClass("harambe")).toEqual(true);
});

it ("should display children", () => {
  let component = mount(generateComponent({
    children: "this is a test",
  }));
  expect(component).toMatchSnapshot();

  const labelProps = getSingleSpecWrapper(component, "input-label").props();

  expect(labelProps.children).toEqual("this is a test");
});

it ("should accept an id", () => {
  let component = mount(generateComponent({
    id: "harambe",
  }));
  expect(component).toMatchSnapshot();

  const inputProps = getSingleSpecWrapper(component, "input").props();

  expect(inputProps.id).toEqual("harambe");
});

// XXX Label doesn't actually display anything. Is that right?
it ("should accept label", () => {
  let component = mount(generateComponent({
    label: "harambe",
  }));
  expect(component).toMatchSnapshot();
});

it ("should accept name prop", () => {
  let component = mount(generateComponent({
    name: "harambe",
  }));
  expect(component).toMatchSnapshot();
});

it ("should add inputClasses with inputClasses prop", () => {
  let component = mount(generateComponent({
    inputClasses: "test1 harambe",
  }));

  expect(component).toMatchSnapshot();

  const input = getSingleSpecWrapper(component, "input");

  expect(input.hasClass("harambe")).toEqual(true);
});

it ("should respond to onclick prop", () => {
  const spy = jest.fn();
  let component = mount(generateComponent({
    clicked: spy,
  }));

  expect(component).toMatchSnapshot();

  const input = getSingleSpecWrapper(component, "input");
  input.simulate("click");

  expect(spy).toBeCalled();
});

it ("should hide label with hideLabel prop", () => {
  let component = mount(generateComponent({
    hideLabel: true,
  }));

  expect(component).toMatchSnapshot();

  expect(component.find("label").length).toEqual(0);
});

it("validate does not set error if validated", () => {
  const mockEvent = {
    target: {
      value: "test",
    },
  };
  const mockValidation = jest.fn(() => true);
  const wrapper = shallow(generateComponent({
    validation: mockValidation,
  }));
  wrapper.instance().validate(mockEvent);
  expect(wrapper.state().error).toBe(false);
});

it("validate sets error if not validated", () => {
  const mockEvent = {
    target: {
      value: "test",
    },
  };
  const mockValidation = jest.fn(() => false);
  const wrapper = shallow(generateComponent({
    validation: mockValidation,
  }));
  wrapper.instance().validate(mockEvent);
  expect(wrapper.state().error).toBe(true);
});

it("validate removes active and error if no value", () => {
  const mockEvent = {
    target: {
      value: null,
    },
  };
  const mockValidation = jest.fn(() => true);
  const wrapper = shallow(generateComponent({
    validation: mockValidation,
  }));
  wrapper.setState({ active: true, error: true });
  wrapper.instance().validate(mockEvent);
  expect(wrapper.state().active).toBe(false);
  expect(wrapper.state().error).toBe(false);
});

it("renderHelpText does nothing if no error", () => {
  const wrapper = shallow(generateComponent());
  const result = wrapper.instance().renderHelpText();
  expect(result).toBe(undefined);
});

it("renderHelpText renders when error and errorText", () => {
  const wrapper = shallow(generateComponent({
    errorText: "test",
  }));
  wrapper.setState({ error: true });
  const result = wrapper.instance().renderHelpText();
  expect(result).toMatchSnapshot();
});

it("renderHelpText renders when status", () => {
  const wrapper = shallow(generateComponent());
  wrapper.setState({ status: "this is my status" });
  const result = wrapper.instance().renderHelpText();
  expect(result).toMatchSnapshot();
});

it("pushes type prop to inputclasses", () => {
  const wrapper = shallow(generateComponent({
    type: "mytype",
  }));
  expect(wrapper).toMatchSnapshot();
});
