exports[`test pushes type prop to inputclasses 1`] = `
<div className="input mytype" data-spec="input-wrapper">
<h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
<small data-spec="input-label" />
</h6>
<input id={[undefined]} type="mytype" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
<Label labelFor={[undefined]} />
</div>
`;

exports[`test renderHelpText renders when error and errorText 1`] = `
<span
  className="input__status">
  test
</span>
`;

exports[`test renderHelpText renders when status 1`] = `
<span
  className="input__status">
  this is my status
</span>
`;

exports[`test should accept a default value 1`] = `
<Checkbox defaultValue={true}>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="checked" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept an id 1`] = `
<Checkbox id="harambe">
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id="harambe" type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor="harambe">
      <label htmlFor="harambe" style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept label 1`] = `
<Checkbox label="harambe">
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id="harambe" type="checkbox" name="harambe" className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor="harambe">
      <label htmlFor="harambe" style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept name prop 1`] = `
<Checkbox name="harambe">
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id="harambe" type="checkbox" name="harambe" className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor="harambe">
      <label htmlFor="harambe" style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 1`] = `
<Checkbox classes={{...}}>
  <div className="input checkbox test1 harambe" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 2`] = `
<Checkbox classes="test1 harambe">
  <div className="input checkbox test1 harambe" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add inputClasses with inputClasses prop 1`] = `
<Checkbox inputClasses="test1 harambe">
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className="test1 harambe" disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should disable input with disabled prop 1`] = `
<Checkbox disabled={true}>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={true} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should display children 1`] = `
<Checkbox>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label">
        this is a test
      </small>
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should hide label with hideLabel prop 1`] = `
<Checkbox hideLabel={true}>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
  </div>
</Checkbox>
`;

exports[`test should render with minimal props 1`] = `
<Checkbox>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[undefined]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should respond to onclick prop 1`] = `
<Checkbox clicked={[Function]}>
  <div className="input checkbox" data-spec="input-wrapper">
    <h6 className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small data-spec="input-label" />
    </h6>
    <input id={[undefined]} type="checkbox" name={[undefined]} className={[undefined]} disabled={[undefined]} defaultChecked="" onClick={[Function]} style={{...}} data-spec="input" />
    <Label labelFor={[undefined]}>
      <label htmlFor={[undefined]} style={{...}} />
    </Label>
  </div>
</Checkbox>
`;
